--- a/memory-bank/progress.yml
+++ b/memory-bank/progress.yml
@@ -1,7 +1,7 @@
 project_status:
-  overall_completion: "90%"
-  phase: "Production Ready"
-  last_updated: "2025-01-29"
+  overall_completion: "95%"
+  phase: "Production Ready with Advanced Features"
+  last_updated: "2025-09-17"
 
 completed_milestones:
   - name: "Core Architecture"
@@ -53,6 +53,34 @@ completed_milestones:
       - "Graceful error handling and progress tracking"
       - "Enhanced file path matching and validation"
 
+  - name: "Multi-Instance Processing System"
+    completion_date: "2025-09-17"
+    deliverables:
+      - "MultiInstanceProcessor for orchestrating multiple AI instances"
+      - "Parallel execution with concurrency control and resource management"
+      - "Instance-specific configurations (provider, model, temperature)"
+      - "Comprehensive result aggregation and deduplication"
+      - "Fault tolerance through instance redundancy"
+
+  - name: "Advanced Deduplication System"
+    completion_date: "2025-09-17"
+    deliverables:
+      - "ExactDuplicateRemover with multi-level deduplication strategy"
+      - "Level 1: Exact hash-based duplicate removal using SHA-256"
+      - "Level 2: Normalized duplicate removal (whitespace, quotes, case)"
+      - "Level 3: Same file+line duplicate resolution with severity prioritization"
+      - "Level 4: AI-powered semantic similarity analysis"
+      - "ContentSimilarityService for intelligent comment deduplication"
+
+  - name: "Parallel Processing Infrastructure"
+    completion_date: "2025-09-17"
+    deliverables:
+      - "Semaphore class for concurrency control with configurable permits"
+      - "TokenBudgetManager for AI token allocation and tracking"
+      - "Optimal concurrency calculation based on resources and constraints"
+      - "Graceful resource cleanup and comprehensive error recovery"
+      - "Detailed resource utilization metrics and monitoring"
+
 current_features:
   implemented:
     - "Bitbucket integration"
@@ -63,6 +91,11 @@ current_features:
     - "CLI interface"
     - "YAML configuration"
     - "Environment variable support"
+    - "Multi-instance processing with consensus-based analysis"
+    - "Advanced multi-level deduplication system"
+    - "AI-powered semantic similarity analysis"
+    - "Parallel processing with resource management"
+    - "Concurrency control and token budget management"
 
   in_progress:
     - "Documentation updates"
@@ -76,6 +109,19 @@ current_features:
     - "Webhook automation"
 
 recent_improvements:
+  - date: "2025-09-17"
+    changes:
+      - "MAJOR FEATURE: Implemented multi-instance processing system for consensus-based AI analysis"
+      - "Added MultiInstanceProcessor with parallel execution and concurrency control"
+      - "Implemented advanced 4-level deduplication strategy (exact, normalized, same-line, semantic)"
+      - "Added AI-powered semantic similarity analysis via ContentSimilarityService"
+      - "Implemented sophisticated parallel processing infrastructure with Semaphore and TokenBudgetManager"
+      - "Added comprehensive resource management and optimal concurrency calculation"
+      - "Enhanced type definitions with multi-instance and deduplication interfaces"
+      - "Added extensive configuration options for multi-instance and semantic deduplication"
+      - "Implemented graceful error handling and detailed metrics tracking"
+      - "Added comprehensive unit tests for all new components"
+
   - date: "2025-01-29"
     changes:
       - "Implemented comprehensive batch processing system for large PRs"
