--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "check:all": "npm run lint && npm run format --check && npm run validate && npm run validate:commit"
   },
   "dependencies": {
-    "@juspay/neurolink": "^5.1.0",
+    "@juspay/neurolink": "^7.40.1",
     "@nexus2520/bitbucket-mcp-server": "^0.10.0",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
@@ -97,36 +97,36 @@
     "yaml": "^2.3.0"
   },
   "devDependencies": {
-    "@types/commander": "^2.12.5",
-    "@types/inquirer": "^9.0.8",
-    "@types/jest": "^29.0.0",
-    "@types/lodash": "^4.14.0",
-    "@types/node": "^20.0.0",
-    "@eslint/js": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^9.0.0",
-    "jest": "^29.0.0",
-    "rimraf": "^5.0.0",
-    "ts-jest": "^29.0.0",
-    "ts-node": "^10.0.0",
-    "ts-node-dev": "^2.0.0",
-    "tsc-alias": "^1.8.0",
-    "typedoc": "^0.25.0",
-    "typescript": "^5.0.0",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.26.2",
+    "@eslint/js": "^9.0.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.0",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.0",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.1",
-    "semantic-release": "^24.0.0",
+    "@types/commander": "^2.12.5",
+    "@types/inquirer": "^9.0.8",
+    "@types/jest": "^29.0.0",
+    "@types/lodash": "^4.14.0",
+    "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.0.0",
+    "husky": "^9.0.0",
+    "jest": "^29.0.0",
+    "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
     "publint": "^0.3.0",
-    "husky": "^9.0.0",
-    "lint-staged": "^15.0.0"
+    "rimraf": "^5.0.0",
+    "semantic-release": "^24.0.0",
+    "ts-jest": "^29.0.0",
+    "ts-node": "^10.0.0",
+    "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.0",
+    "typedoc": "^0.25.0",
+    "typescript": "^5.0.0"
   },
   "peerDependencies": {
     "typescript": ">=4.5.0"
