feat(summary): Added config support for summary comment

--- a/yama.config.example.yaml
+++ b/yama.config.example.yaml
@@ -29,6 +29,7 @@ features:
   # Code Review Configuration
   codeReview:
     enabled: true
+    postSummaryComment: true # Post summary comment at the end of review (default: true)
     severityLevels: ["CRITICAL", "MAJOR", "MINOR", "SUGGESTION"]
     categories:
       [
