feat(observability): Added support for langfuse
  - Added .env.example — Langfuse configuration variables for API keys
  and endpoint
  - Updated package.json — @juspay/neurolink pinned to 7.53.2 for
  Langfuse support
  - Updated pnpm-lock.yaml — lockfile reflects neurolink version
  upgrade
  - Updated src/cli/index.ts — graceful shutdown handlers for
  OpenTelemetry trace flushing
  - Updated src/core/ContextGatherer.ts — NeuroLink initialization with
   observability config
  - Updated src/core/Guardian.ts — NeuroLink initialization with
  observability config
  - Updated src/features/CodeReviewer.ts — NeuroLink initialization
  with observability config
  - Updated src/features/DescriptionEnhancer.ts — NeuroLink
  initialization with observability config
  - Updated src/utils/ContentSimilarityService.ts — NeuroLink
  initialization with observability config

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,14 @@ GITHUB_TOKEN=your-github-token
 GITLAB_TOKEN=your-gitlab-token
 
 # Advanced Configuration (Optional)
+CONFIG_PATH=./yama.config.yaml
+LOG_LEVEL=info
 YAMA_DEBUG=false
 YAMA_CACHE_TTL=3600
 YAMA_MAX_RETRIES=3
-LOG_LEVEL=info
-CONFIG_PATH=./yama.config.yaml
+
+# Langfuse Configuration (Optional)
+LANGFUSE_BASE_URL=https://cloud.langfuse.com
+LANGFUSE_ENABLED=true
+LANGFUSE_PUBLIC_KEY=pk-lf-your-public-key
+LANGFUSE_SECRET_KEY=sk-lf-your-secret-key
